# MekLab

./: README.md
Lab4/camera_pipeline/: package.xml  setup.py
Lab4/launch/: pipeline.launch.py
MiniProsjekt/: frames_2025-03-24_21.26.07.gv
MiniProsjekt/qube_description/: package.xml
MiniProsjekt/qube_description/launch/: view_cube.launch.py
MiniProsjekt/qube_description/urdf/: cube.macro.xacro  cube.urdf.xacro
MiniProsjekt/src/qube_bringup/: package.xml  setup.py
MiniProsjekt/src/qube_bringup/launch/: bringup.launch.py
MiniProsjekt/src/qube_bringup/urdf/: controller_qube.urdf.xacro
MiniProsjekt/src/qube_controller/: package.xml  setup.py
MiniProsjekt/src/qube_controller/qube_controller/: velocity_controller.py
MiniProsjekt/src/qube_description/: package.xml  setup.py
MiniProsjekt/src/qube_description/launch/: view_qube.launch.py
MiniProsjekt/src/qube_description/urdf/: qube.macro.xacro  qube.urdf.xacro
MiniProsjekt/src/qube_driver/: package.xml  setup.py
install/: local_setup.sh  setup.sh
log/: latest_build
src/joint_description/: CMakeLists.txt  package.xml
src/joint_description/config/: Config.rviz
src/joint_description/launch/: view_model.launch.py
src/joint_description/urdf/: joint_model.macro.urdf  joint_model.urdf
src/joint_simulator/: CMakeLists.txt  package.xml
src/joint_simulator/src/: joint_simulator_node.cpp  joint_simulator_node.hpp  main.cpp
src/launch/: pid_system_launch.xml
src/pid_controller/: CMakeLists.txt  package.xml
src/pid_controller/config/: parameters.yaml
src/pid_controller/launch/: pid_launch.py  pid_system.launch.xml  pid_system_launch.xml
src/pid_controller/src/: pid_controller_node.cpp  reference_input_node.cpp
src/pid_controller_msgs/: CMakeLists.txt  package.xml
src/pid_controller_msgs/src/: reference_input_node.cpp
src/pid_controller_msgs/srv/: SetReference.srv
